--- a/MasterPage.master
+++ b/MasterPage.master
@@ -10,16 +10,17 @@
 
     <link href="Scripts/css/bootstrap.min.css" rel="stylesheet">
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+    <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
 
     <script src="Scripts/js/jquery-3.3.1.min.js"></script>
     <script src="Scripts/js/popper.min.js"></script>
     <script src="Scripts/js/bootstrap.min.js"></script>
 
 </head>
-<body id="bootstrapovvr" style="padding: 0;">
+<body id="bootstrapovvr" style="padding: 0; background-color:#BCE0FD">
     <form runat="server">
-        
-        <header class="navbar navbar-expand-lg navbar-dark bg-primary">
+
+        <header class="navbar navbar-expand-lg navbar-dark fixed-top smart-scroll">
             <a class="navbar-brand" style="padding-left: 20px; padding-right: 20px" href="Home.aspx">HR MANAGEMENT SYSTEM</a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -40,23 +41,83 @@
                 </ul>
                 <ul class="nav navbar-nav ml-auto" style="padding-right: 20px">
                     <li class="nav-item">
-                        <asp:HyperLink CssClass="nav-link" runat="server" ID="LoginLogoutHyperLink"></asp:HyperLink></li>
-                    <li class="nav-item">
                         <asp:Label CssClass="nav-link" Visible="false" runat="server" ID="HiLabel"></asp:Label></li>
+                    <li class="nav-item">
+                        <asp:HyperLink CssClass="nav-link" runat="server" ID="LoginLogoutHyperLink"></asp:HyperLink></li>
                 </ul>
             </div>
         </header>
-        <br />
-        <div class="container body-content">
-            <asp:ContentPlaceHolder ID="MainContent" runat="server">
-            </asp:ContentPlaceHolder>
-            <hr />
-        </div>
+
+        <asp:ContentPlaceHolder ID="MainContent" runat="server">
+        </asp:ContentPlaceHolder>
         <style>
+            #bootstrapovvr header{
+                background-color:#2699FB 
+            }
+            #bootstrapovvr #navbarNavDropdown{
+                background-color:#2699FB 
+            }
             #bootstrapovvr .nav-link {
                 color: white;
+                width: 100%;
+                height: 100%;
+                padding: 1rem;
+            }
+
+            #bootstrapovvr .nav-item {
+                height: 100%;
+            }
+
+                #bootstrapovvr .nav-item:hover {
+                    background-color: white;
+                }
+
+            #bootstrapovvr .nav-link:hover {
+                color: blue;
+            }
+
+            #bootstrapovvr header {
+                padding-top: 0rem;
+                padding-bottom: 0rem;
+            }
+            #bootstrapovvr button.navbar-toggler{
+                    padding: 1rem;
+            
+            }
+            .scrolled-down {
+                transform: translateY(-100%);
+                transition: all 0.3s ease-in-out;
+            }
+
+            .scrolled-up {
+                transform: translateY(0);
+                transition: all 0.3s ease-in-out;
+            }
+            a.navbar-brand{
+                    transition: all 0.3s ease-in-out;
+            }
+            a.navbar-brand:hover{
+                font-size:1.30rem;
+                
             }
         </style>
+        <script>
+            $('body').css('padding-top', $('.navbar').outerHeight() + 'px')
+
+            if ($('.smart-scroll').length > 0) { // check if element exists
+                var last_scroll_top = 0;
+                $(window).on('scroll', function() {
+                    scroll_top = $(this).scrollTop();
+                    if(scroll_top < last_scroll_top) {
+                        $('.smart-scroll').removeClass('scrolled-down').addClass('scrolled-up');
+                    }
+                    else {
+                        $('.smart-scroll').removeClass('scrolled-up').addClass('scrolled-down');
+                    }
+                    last_scroll_top = scroll_top;
+                });
+            }
+        </script>
     </form>
 </body>
 </html>
