--- a/MasterPage.master
+++ b/MasterPage.master
@@ -8,16 +8,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HRMS</title>
 
-    <link href="Scripts/css/bootstrap.min.css" rel="stylesheet">
+    <link href="~/Scripts/css/bootstrap.min.css" rel="stylesheet">
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
-    <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
-
+    
     <script src="Scripts/js/jquery-3.3.1.min.js"></script>
     <script src="Scripts/js/popper.min.js"></script>
     <script src="Scripts/js/bootstrap.min.js"></script>
 
 </head>
-<body id="bootstrapovvr" style="padding: 0; background-color:#BCE0FD">
+<body id="bootstrapovvr" style="padding: 0;">
     <form runat="server">
 
         <header class="navbar navbar-expand-lg navbar-dark fixed-top smart-scroll">
@@ -52,7 +51,9 @@
         </asp:ContentPlaceHolder>
         <style>
             #bootstrapovvr header{
-                background-color:#2699FB 
+                background-color:#2699FB;
+                box-shadow: 
+                
             }
             #bootstrapovvr #navbarNavDropdown{
                 background-color:#2699FB 
