--- a/HRHome.master
+++ b/HRHome.master
@@ -8,7 +8,7 @@
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
                     <div id="profilePicWrapper">
-                        <img id="profilePic" src="Uploads/ProfilePictures/profilePic.png" />
+                        <img src="~/Uploads/ProfilePictures/profilePic.png" ID="profilePic" class="profilePic imgWidthGreater" runat="server" />
                     </div>
                 </li>
                 <li><asp:Hyperlink runat="server" id="profileSelection" href="HRProfile.aspx">Profile</asp:Hyperlink> </li>
@@ -81,15 +81,22 @@
         }
         /* side bar */
         #profilePicWrapper {
-            object-fit: contain;
+            margin-left:15px;
+            text-indent:0px !important;
+           width: 100px;
             height: 100px;
-            width: 100px;
+            overflow: hidden;
+            border-radius: 50%;
+            border:solid 4px white;
         }
 
-        #profilePic {
-            border-radius: 50%;
-            height: 100%;
-            width: 100%;
+        .imgWidthGreater{
+            height:100%;
+            width:auto;
+        }
+        .imgHeightGreater{
+            width:100%;
+            height:auto;
         }
 
         #sidebar-wrapper {
@@ -219,7 +226,14 @@
         }
     </style>
     <script>
+        $(document).ready(function () {
+            if ($('.profilePic').width() > $('.profilePic').height()) {
 
+                $('.profilePic').addClass('imgWidthGreater').removeClass('imgHeightGreater');
+            } else {
+                $('.profilePic').addClass('imgHeightGreater').removeClass('imgWidthGreater');
+            }
+        });
         if ($('.smart-scroll-navbar').length > 0) {
             var last_scroll_top_navbar = 0;
             $(window).on('scroll', function () {
@@ -243,6 +257,7 @@
                 $(".popout").removeClass("show").addClass("hide");
             }, time * 1000);
         }
+
     </script>
 </asp:Content>
 
